# uzeyiros

./: CHANGELOG.md  CONTRIBUTORS  Cargo.toml  README.md
cmd/: mk  usertests.c
iso/: README.txt
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml
kernel/src/: acpi.rs  bio.rs  cga.rs  console.rs  entry.S  exec.rs  file.rs  fs.rs  fslog.rs  initcode.rs  ioapic.rs  kalloc.rs  kbd.rs  kmem.rs  main.rs  pipe.rs  proc.rs  sd.rs  shell.rs  smp.rs  spinlock.rs  syscall.rs  sysfile.rs  trap.rs  vm.rs  x86_64.rs  xapic.rs
lib/: x86_64-unknown-none-elf.json  x86_64-unknown-rxv64-elf.json
syslib/: Cargo.toml
ulib/: Cargo.toml
ulib/src/: lib.rs  malloc.rs  rvdprintf.rs  sysx86_64.rs
xtask/: Cargo.toml
xtask/src/: main.rs
