[package]
name = "uzeyiros"
version = "1.0.0"
authors = ["Üzeyir İsmail Bahtiyar <uzeyir@example.com>"]
description = "ÜzeyirOS - Kişisel İşletim Sistemi"
edition = "2024"

[dependencies]
bitflags = "*"
seq-macro = "*"
static_assertions = "*"
syslib = { path = "../syslib" }
zerocopy = { version = "*", features = [ "derive" ] }
